--- a/src/Vistas/CitaRegistro.form
+++ b/src/Vistas/CitaRegistro.form
@@ -54,7 +54,7 @@
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" attributes="0">
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="19" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -65,19 +65,19 @@
                           </Group>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Component id="jDateChooser1" max="32767" attributes="0"/>
-                              <Component id="jTFCodRefuerzo" alignment="1" max="32767" attributes="0"/>
+                              <Component id="jDCfechaCal" max="32767" attributes="0"/>
                               <Component id="jtdni" max="32767" attributes="0"/>
-                              <Component id="jCBCentroVacunacion" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                              <Component id="jCBCentroVacunacion" alignment="0" pref="150" max="32767" attributes="0"/>
+                              <Component id="jCBCodigoRefuerzo" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jSpinField1" min="-2" pref="38" max="-2" attributes="0"/>
+                          <Component id="jSFhora" min="-2" pref="38" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
-                          <Component id="jSpinField2" min="-2" pref="42" max="-2" attributes="0"/>
+                          <Component id="jSFMinutos" min="-2" pref="42" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
-                          <Component id="jButton1" min="-2" pref="159" max="-2" attributes="0"/>
+                          <Component id="jBGenerarCita" min="-2" pref="159" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
                           <Component id="jBCentroVac" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
@@ -102,9 +102,9 @@
                   </Group>
                   <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="jSpinField1" max="32767" attributes="0"/>
-                      <Component id="jSpinField2" max="32767" attributes="0"/>
-                      <Component id="jDateChooser1" alignment="0" pref="30" max="32767" attributes="0"/>
+                      <Component id="jSFhora" max="32767" attributes="0"/>
+                      <Component id="jSFMinutos" max="32767" attributes="0"/>
+                      <Component id="jDCfechaCal" alignment="0" pref="30" max="32767" attributes="0"/>
                       <Component id="jLabel3" alignment="1" pref="30" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
@@ -113,16 +113,16 @@
                       <Component id="jCBCentroVacunacion" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="1" attributes="0">
-                      <Component id="jLabel5" min="-2" pref="30" max="-2" attributes="0"/>
-                      <Component id="jTFCodRefuerzo" min="-2" pref="30" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLabel5" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
+                      <Component id="jCBCodigoRefuerzo" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jBCentroVac" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jBGenerarCita" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="86" max="32767" attributes="0"/>
+                  <EmptySpace pref="82" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -161,7 +161,7 @@
             <Property name="text" type="java.lang.String" value="Fecha de Cita:"/>
           </Properties>
         </Component>
-        <Component class="com.toedter.calendar.JDateChooser" name="jDateChooser1">
+        <Component class="com.toedter.calendar.JDateChooser" name="jDCfechaCal">
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
@@ -186,19 +186,7 @@
             <Property name="text" type="java.lang.String" value="C&#xf3;digo de refuerzo:"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTFCodRefuerzo">
-          <Properties>
-            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
-              <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
-                <LineBorder/>
-              </Border>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTFCodRefuerzoActionPerformed"/>
-          </Events>
-        </Component>
-        <Component class="javax.swing.JButton" name="jButton1">
+        <Component class="javax.swing.JButton" name="jBGenerarCita">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Tahoma" size="12" style="0"/>
@@ -213,6 +201,9 @@
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBGenerarCitaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jBCentroVac">
           <Properties>
@@ -233,7 +224,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBCentroVacActionPerformed"/>
           </Events>
         </Component>
-        <Component class="com.toedter.components.JSpinField" name="jSpinField1">
+        <Component class="com.toedter.components.JSpinField" name="jSFhora">
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
@@ -244,7 +235,7 @@
             <Property name="minimum" type="int" value="8"/>
           </Properties>
         </Component>
-        <Component class="com.toedter.components.JSpinField" name="jSpinField2">
+        <Component class="com.toedter.components.JSpinField" name="jSFMinutos">
           <Properties>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
@@ -269,6 +260,16 @@
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;CentroVacunacion&gt;"/>
+          </AuxValues>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="jCBCodigoRefuerzo">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="0"/>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Integer&gt;"/>
           </AuxValues>
         </Component>
       </SubComponents>
